FIX MENU CLOSE ICON ALIGNMENT

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -267,10 +267,10 @@ a.unstyled {
 	opacity: 0;
 }
 #navbar.menu-open #navbar_menu_button .bar:nth-child(1) {
-	transform: rotate(-45deg) translate(-0.25em, 0.3em);
+	transform: rotate(-45deg) translate(-0.275em, 0.25em);
 }
 #navbar.menu-open #navbar_menu_button .bar:nth-child(3) {
-	transform: rotate(45deg) translate(-0.25em, -0.3em);
+	transform: rotate(45deg) translate(-0.275em, -0.25em);
 }
 
 #nav_links_wrapper {
